<resources>
    <string name="app_name">Find My Car - GPS Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_feedback">Feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_get_location">Get information from car</string>
    <string name="button_view_location">Show location on map</string>
    <string name="pref_file_key">se.simulator.findmycar_gpstracker.PREFERENCE_FILE_KEY</string>
    <string name="filter_message_received">se.simulator.findmycar_gpstracker.filter_message_received</string>
    <string name="default_country_iso">SE</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="cancel">cancel</string>
    <string name="first_run">first_run</string>
    <string name="configure">Configure</string>
    <string name="spinner_prompt_main">Spinner Promt Main</string>
    <string name="spinner_position_main">spinner_position_main</string>
    <string name="configure_application_label">Configure Application</string>
    <string name="configure_tracker_number_description">Number to tracker, should be provided with inserted
        SIM-card. International number required to interact with vehicle when outside country borders.</string>
    <string name="configure_tracker_number_title">Number Tracker:</string>
    <string name="configure_tracker_number_hint">+46701234567</string>
    <string name="configure_user_description">Login user name of tracker device, up to five characters, leave blank for no user name.</string>
    <string name="configure_user_title">User Name:</string>
    <string name="configure_user_hint">abc12</string>
    <string name="configure_password_description">Login password of tracker device, up to five characters, leave blank for no password.
        This password will not be encrypted and be shown in plain sight in the text message history.</string>
    <string name="configure_password_title">Password:</string>
    <string name="configure_password_hint">123ab</string>
    <string name="configure_user_number_description">Number to user phone, domestic number required.</string>
    <string name="configure_user_number_title">Number User:</string>
    <string name="configure_user_number_hint">0701234567</string>
    <string name="configure_no_number_toast">This application require a tracker number to work, the number can later be changed in Settings.</string>
    <string name="open_configure_device_description">Do you wish to configure the tracker device?</string>
    <string name="configure_device_label">Configure Device</string>
    <string name="configure_device_warning">This will sent multiple SMS to and from the device, which may cause charges on your mobile account</string>
    <string name="configure_checkbox_text_reset_default">Reset to defaults</string>
    <string name="configure_checkbox_text_alarm_event">Alert on alarm</string>
    <string name="configure_advanced_show_more">Show advanced settings</string>
    <string name="configure_advanced_show_less">Hide advanced settings</string>
    <string name="configure_text_sleep_mode">Sleep mode:</string>
    <string-array name="configure_spinner_entries_sleep_modes">
        <item>Off</item>
        <item>Sleep</item>
        <item>Deep sleep</item>
    </string-array>
    <string name="configure_text_number_slot">Number exclusive:</string>
    <string-array name="configure_spinner_entries_number_slot">
        <item>Off</item>
        <item>Slot 1</item>
        <item>Slot 2</item>
        <item>Slot 3</item>
        <item>Slot 4</item>
        <item>Slot 5</item>
        <item>Slot 6</item>
        <item>Slot 7</item>
        <item>Slot 8</item>
        <item>Slot 9</item>
        <item>Slot 10</item>
        <item>Slot 11</item>
    </string-array>
    <string name="configure_checkbox_text_old_login">Existing login info</string>
    <string name="configure_login_info_old_user">Old user name:</string>
    <string name="configure_login_info_old_password">Old password:</string>
    <string name="configure_checkbox_text_gprs_enabled">GPRS enabled</string>
    <string name="saved_country_iso">saved_country_iso</string>
    <string name="pref_title_application_category">Application</string>
    <string name="pref_title_user_information">User information</string>
    <string name="pref_key_user_information">pref_key_user_information</string>
    <string name="pref_title_configure_category">Configure tracker</string>
    <string name="pref_title_general">General</string>
    <string name="pref_key_general">pref_key_general</string>
    <string name="pref_title_alarm">Alarm</string>
    <string name="pref_key_alarm">pref_key_alarm</string>
    <string name="pref_title_geofence">Geofence</string>
    <string name="pref_key_geofence">pref_key_geofence</string>
    <string name="pref_title_geofence_map">Geofence map</string>
    <string name="pref_key_geofence_map">pref_key_geofence_map</string>
        <string name="title_activity_geofence_map">Geofence</string>
        <string name="geofence_text_zone_selection">Zone nr:</string>
        <string name="geofence_text_shape_selection">Shape:</string>
        <string-array name="geofence_entries_shape_selection">
            <item>Circle</item>
            <item>Rectangle</item>
        </string-array>
        <string-array name="geofence_entries_zone_selection">
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>
        </string-array>
        <string name="pref_geofence_shape">pref_geofence_shape</string>
        <string name="pref_geofence_coordinates">pref_geofence_coordinates</string>
        <string name="pref_title_geofence_zone_select">Selected zone</string>
        <string name="pref_key_geofence_zone_select">pref_key_geofence_zone_select</string>
        <string-array name="pref_list_titles_geofence_zone_select">
            <item>Zone 1</item>
            <item>Zone 2</item>
            <item>Zone 3</item>
            <item>Zone 4</item>
            <item>Zone 5</item>
        </string-array>
        <string-array name="pref_list_values_geofence_zone_select">
            <item>0</item>
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
        </string-array>
        <string name="pref_default_geofence_zone_select">1</string>
    <string name="pref_title_geofence_active">Zone active</string>
    <string name="pref_key_geofence_active">pref_key_geofence_active</string>
    <string name="pref_key_geofence_active_state">pref_key_geofence_active_state</string>
        <string name="pref_title_geofence_trigger">Alert trigger</string>
        <string name="pref_key_geofence_trigger">pref_key_geofence_trigger</string>
        <string-array name="pref_list_titles_geofence_trigger">
            <item>On entering zone</item>
            <item>On exiting zone</item>
            <item>On entering and exiting zone</item>
        </string-array>
        <string-array name="pref_list_values_geofence_trigger">
            <item>1</item>
            <item>2</item>
            <item>3</item>
        </string-array>
    <string name="pref_title_geofence_event_number">Alert number</string>
    <string name="pref_key_geofence_event_number">pref_key_geofence_event_number</string>
    <string name="pref_hint_geofence_event_number">Enter on form: 0701234567</string>
    <string name="pref_title_geofence_message">Alert message</string>
    <string name="pref_key_geofence_message">pref_key_geofence_message</string>
    <string name="pref_hint_geofence_message">Message in text when alert is triggered</string>
    <string name="pref_title_geofence_configure_device">Save geofence to device</string>
    <string name="pref_key_geofence_configure_device">pref_key_geofence_configure_device</string>
    <string name="pref_title_tracker_number">Tracker number</string>
    <string name="pref_hint_tracker_number">Enter on form: +46701234567</string>
    <string name="pref_key_tracker_number">pref_key_tracker_number</string>
    <string name="pref_title_user_number">User number</string>
    <string name="pref_hint_user_number">Enter on form: 0701234567</string>
    <string name="pref_key_user_number">pref_key_user_number</string>
    <string-array name="pref_list_titles_sms_message">
        <item>getstatus</item>
        <item>getweektime</item>
        <item>getops</item>
        <item>getcfgtime</item>
        <item>ggps</item>
        <item>getgps</item>
        <item>getver</item>
        <item>getinfo</item>
        <item>getio</item>
        <item>getparam</item>
        <item>setparam</item>
        <item>banlist</item>
        <item>crashlog</item>
    </string-array>
    <string-array name="pref_list_values_sms_message">
        <item>getstatus</item>
        <item>getweektime</item>
        <item>getops</item>
        <item>getcfgtime</item>
        <item>ggps</item>
        <item>getgps</item>
        <item>getver</item>
        <item>getinfo</item>
        <item>getio</item>
        <item>getparam</item>
        <item>setparam</item>
        <item>banlist</item>
        <item>crashlog</item>
    </string-array>
    <string name="pref_title_sms_message">Message to send</string>
    <string-array name="pref_default_sms_message">
        <item>ggps</item>
        <item>getgps</item>
    </string-array>
    <string name="pref_key_sms_message">pref_key_sms_message</string>
    <string name="pref_title_login_user">User name</string>
    <string name="pref_hint_login_user">User name registered in tracker</string>
    <string name="pref_key_login_user">pref_key_login_user</string>
    <string name="pref_title_login_password">Password</string>
    <string name="pref_hint_login_password">Password registered in tracker</string>
    <string name="pref_key_login_password">pref_key_login_password</string>
    <string name="pref_title_zoom_level">Map zoom</string>
    <string name="pref_description_zoom_level">Select zoom level</string>
    <string name="pref_button_configure_device_key">pref_button_configure_device_key</string>
    <string name="pref_button_configure_device_title">Configure Device</string>
    <string name="pref_key_zoom_level">pref_key_zoom_level</string>
    <string name="ggps_saved_coordinate_state">ggps_saved_coordinate_state</string>
    <string name="ggps_saved_date">ggps_saved_date</string>
    <string name="ggps_saved_time">ggps_saved_time</string>
    <string name="ggps_saved_speed">ggps_saved_speed</string>
    <string name="ggps_saved_latitude">ggps_saved_latitude</string>
    <string name="ggps_saved_longitude">ggps_saved_longitude</string>
    <string name="getgps_saved_coordinate_state">getgps_saved_coordinate_state</string>
    <string name="getgps_saved_gps_state">getgps_saved_gps_state</string>
    <string name="getgps_saved_satellites">getgps_saved_satellites</string>
    <string name="getgps_saved_latitude">getgps_saved_latitude</string>
    <string name="getgps_saved_longitude">getgps_saved_longitude</string>
    <string name="getgps_saved_altitude">getgps_saved_altitude</string>
    <string name="getgps_saved_speed">getgps_saved_speed</string>
    <string name="getgps_saved_direction">getgps_saved_direction</string>
    <string name="getgps_saved_date">getgps_saved_date</string>
    <string name="getgps_saved_time">getgps_saved_time</string>
    <string name="getio_saved_date_updated">getstatus_saved_date_updated</string>
    <string name="getio_saved_time_updated">getstatus_saved_time_updated</string>
    <string name="getio_saved_digital_inputs">getio_saved_digital_inputs</string>
    <string name="getio_saved_analog_inputs">getio_saved_analog_inputs</string>
    <string name="getio_saved_digital_outputs">getio_saved_digital_outputs</string>
</resources>