<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:preference="http://schemas.android.com/apk/res-auto">

        <se.simulator.findmycar_gpstracker.PreferenceTelephoneNumber
            android:hint="@string/pref_hint_tracker_number"
            android:summary="%s"
            android:inputType="phone"
            android:key="@string/pref_key_tracker_number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_tracker_number" />

        <se.simulator.findmycar_gpstracker.PreferenceTelephoneNumber
            android:hint="@string/pref_hint_user_number"
            android:summary="%s"
            android:inputType="phone"
            android:key="@string/pref_key_user_number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_user_number" />

        <se.simulator.findmycar_gpstracker.AutoSummaryEditTextPreference
            android:hint="@string/pref_hint_login_user"
            android:summary="%s"
            android:inputType="text"
            android:key="@string/pref_key_login_user"
            android:maxLength="5"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_login_user" />

        <se.simulator.findmycar_gpstracker.AutoSummaryEditTextPreference
            android:hint="@string/pref_hint_login_password"
            android:summary="%s"
            android:inputType="text"
            android:key="@string/pref_key_login_password"
            android:maxLength="5"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_login_password" />

</PreferenceScreen>
