<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="se.simulator.findmycar_gpstracker.ConfigureApplicationActivity"
    tools:showIn="@layout/activity_configure_application">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_tracker_number_description"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:text="@string/configure_tracker_number_title"
            android:gravity="center_vertical"
            android:textSize="16sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="phone"
            android:lines="1"
            android:hint="@string/configure_tracker_number_hint"
            android:id="@+id/content_configure_application_tracker_number"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_user_description"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:text="@string/configure_user_title"
            android:gravity="center_vertical"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text"
            android:maxLength="5"
            android:lines="1"
            android:hint="@string/configure_user_hint"
            android:id="@+id/content_configure_application_user"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_password_description"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:text="@string/configure_password_title"
            android:gravity="center_vertical"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textVisiblePassword"
            android:maxLength="5"
            android:lines="1"
            android:hint="@string/configure_password_hint"
            android:id="@+id/content_configure_application_password"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_user_number_description"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/configure_user_number_title"
            android:gravity="center_vertical"
            android:textSize="16sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="phone"
            android:lines="1"
            android:hint="@string/configure_user_number_hint"
            android:id="@+id/content_configure_application_user_number"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/configure_button_get_number_label"
            android:onClick="getUserPhoneNumber"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="accept"
            />
    </RelativeLayout>

</LinearLayout>