<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="se.simulator.findmycar_gpstracker.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/text1"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:id="@+id/button_get_location"
        android:text="@string/button_get_location"
        android:onClick="getLocation"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spinner_main"
            android:prompt="@string/spinner_prompt_main"/>

        <EditText
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/parameter_selection_main"
            android:visibility="gone"
            android:maxLength="4"/>
        <EditText
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:id="@+id/new_value_main"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:id="@+id/car_status_container">
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:id="@+id/button_view_location"
        android:text="@string/button_view_location"
        android:onClick="viewLocation"/>
</LinearLayout>
